sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	while (!plusPetit(getNombreValeurs()-1,getNombreValeurs()-1,)){
	for (k<-0 to getNombreValeurs()-2){
		if (plusPetit(k+1,k)){
			echange(k,k+1)
		}
	}
	}
}
